# server-tester

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
deploy/: ec2-setup.sh
nginx/: nginx.conf
src/: config.rs  main.rs  persistence.rs  state.rs
src/embedded/: app.js  index.html  mod.rs  style.css
src/management/: api.rs  mod.rs  ui.rs
src/virtual_server/: handlers.rs  listener.rs  mod.rs
