[package]
name = "server-tester"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
